--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,3 +1,8 @@
+<% if @student %>
+  <h1>Student Detail</h1>
+  <h4><%= @student.full_name %></h4>
+<% end %>
+
 <h1>Courses</h1>
 
 <table class="table table-dark">
@@ -8,6 +13,9 @@
       <th>Start date</th>
       <th>End date</th>
       <th>Teacher</th>
+      <% if @student %>
+        <th>Register</th>
+      <% end %>
       <th colspan="3"></ht>
     </tr>
   </thead>
@@ -20,6 +28,9 @@
         <td><%= course.start_date %></td>
         <td><%= course.end_date %></td>
         <td><%= course.teacher.full_name %></td>
+        <% if @student %>
+          <td><%= @student.has_course?(course) ? 'YES' : 'NO' %></td>
+        <% end %>
         <td>
           <%= link_to 'Show', course, class: "btn btn-primary" %>
           <%= link_to 'Edit', edit_course_path(course), class: "btn btn-success" %>
