--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -27,6 +27,7 @@
       <div class="card-body">
         <%= link_to 'Edit', edit_student_path(@student), class: 'btn btn-primary' %>
         <%= link_to 'Back', students_path, class: 'btn btn-secondary' %>
+        <%= link_to 'Courses', student_courses_path(@student), class: 'btn btn-success' %>
       </div>
     </div>
   </div>
