--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,11 +1,24 @@
 <% if @student %>
-  <h1>Student Detail</h1>
-  <h4><%= @student.full_name %></h4>
+  <h1><%= @student.full_name %></h1>
+
+  <div class="row">
+    <div class="col-md-6" style="padding-top: 10px;">
+      <b>Enrolled Courses</b>
+    </div>
+    <div class="col-md-6" style="text-align: right;">
+      <%= link_to "New enrolment", new_student_enrolment_path(@student), class: "btn btn-outline-primary" %>
+    </div>
+  </div>
+<% else %>
+  <h1>Courses</h1>
+  <div class="row">
+    <div class="col-md-12" style="text-align: right;">
+      <%= link_to "New Course", new_course_path, class: "btn btn-outline-primary" %>
+    </div>
+  </div>
 <% end %>
 
-<h1>Courses</h1>
-
-<table class="table table-dark">
+<table class="table table-dark" style="margin-top: 10px;">
   <thead>
     <tr>
       <th>#</th>
@@ -43,4 +56,4 @@
 
 <br>
 
-<%= link_to "New Course", new_course_path, class: "btn btn-outline-primary" %>
+<%#= link_to "New Course", new_course_path, class: "btn btn-outline-primary" %>
