--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -18,6 +18,7 @@
       <div class="card-body">
         <%= link_to 'Edit', edit_course_path(@course), class: 'btn btn-primary' %>
         <%= link_to 'Back', courses_path, class: 'btn btn-secondary' %>
+        <%= link_to 'Students', course_students_path(@course), class: 'btn btn-success' %>
       </div>
     </div>
   </div>
