--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,23 @@
-<h1>Students</h1>
+<% if @course %>
+  <h1><%= @course.name %></h1>
+  <div class="row">
+    <div class="col-md-6" style="padding-top: 10px;">
+      <b>Enrolled Students</b>
+    </div>
+    <div class="col-md-6" style="text-align: right;">
+      <%= link_to "New enrolment", new_course_enrolment_path(@course), class: "btn btn-outline-primary" %>
+    </div>
+  </div>
+<% else %>
+  <h1>Students</h1>
+  <div class="row">
+    <div class="col-md-12" style="text-align: right;">
+      <%= link_to 'New Student', new_student_path, class: "btn btn-outline-primary" %>
+    </div>
+  </div>
+<% end %>
 
-<table class="table table-dark">
+<table class="table table-dark" style="margin-top: 10px;">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -37,7 +54,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Student', new_student_path, class: "btn btn-outline-primary" %>
