--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,6 +1,12 @@
 <h1>Teachers</h1>
 
-<table class="table table-dark">
+<div class="row">
+  <div class="col-md-12" style="text-align: right;">
+    <%= link_to 'New Teacher', new_teacher_path, class: "btn btn-outline-primary" %>
+  </div>
+</div>
+
+<table class="table table-dark" style="margin-top: 10px;">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -33,7 +39,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Teacher', new_teacher_path, class: "btn btn-outline-primary" %>
