--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,9 +1,27 @@
 <% if @student %>
-  <h1>Student Detail</h1>
-  <h4><%= @student.full_name %></h4>
-<% end %>
+  <div class="row">
+    <div class="col-md-12" style="text-align: center;">
+      <h1>Student Detail</h1>
+      <h3><%= @student.full_name %></h3>
+    </div>
+  </div>
 
-<h1>Courses</h1>
+  <div class="row">
+    <div class="col-md-6" style="padding-top: 10px;">
+      <b>Enrolled Courses</b>
+    </div>
+    <div class="col-md-6" style="text-align: right;">
+      <%= link_to "New enrolment", new_student_enrolment_path(@student), class: "btn btn-outline-primary" %>
+    </div>
+  </div><br>
+<% else %>
+  <h1>Courses</h1>
+  <div class="row">
+    <div class="col-md-12" style="text-align: right;">
+      <%= link_to "New Course", new_course_path, class: "btn btn-outline-primary" %>
+    </div>
+  </div><br>
+<% end %>
 
 <table class="table table-dark">
   <thead>
@@ -16,7 +34,7 @@
       <% if @student %>
         <th>Register</th>
       <% end %>
-      <th colspan="3"></ht>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -40,7 +58,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to "New Course", new_course_path, class: "btn btn-outline-primary" %>
