--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,5 +1,12 @@
 <h1>Teachers</h1>
 
+<div class="row">
+  <div class="col-md-12" style="text-align: right;">
+    <%= link_to 'New Teacher', new_teacher_path, class: "btn btn-outline-primary" %>
+  </div>
+</div>
+<br>
+
 <table class="table table-dark">
   <thead>
     <tr>
@@ -33,7 +40,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Teacher', new_teacher_path, class: "btn btn-outline-primary" %>
